# check_app

./: .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  startup.sh
app/: forms.py  models.py  views.py
app/management/commands/: update_database_from_csv.py
app/migrations/: 0001_initial.py  0002_numberrange_code_numberrange_inn_and_more.py  0003_alter_numberrange_code.py  0004_alter_numberrange_territory_gar.py  0005_alter_numberrange_region.py
app/templates/check_app/: index.html  result.html
check_app/: asgi.py  settings.py  urls.py  wsgi.py
csv_data/: ABC-3xx.csv:Zone.Identifier  ABC-4xx.csv:Zone.Identifier  ABC-8xx.csv:Zone.Identifier  DEF-9xx.csv:Zone.Identifier
